--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js --ignore public --ignore frontend",
+    "deploy": "gh-pages -d public",
     "dev": "webpack -w"
   },
   "keywords": [],
@@ -33,6 +34,7 @@
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "babel-loader": "^8.2.2",
+    "gh-pages": "^3.2.3",
     "nodemon": "^2.0.7",
     "webpack": "^5.27.0",
     "webpack-cli": "^4.5.0"
