--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "helmet": "^4.4.1",
+    "heroku": "^7.60.1",
     "mongoose": "^5.12.1",
     "regenerator-runtime": "^0.13.7",
     "style-loader": "^2.0.0",
